Added repository with huskycms

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     "keywords": [
         "huskycms", "plugin", "module"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Milsrepo/hc-backend.git"
+        }
+    ],
     "license": "MIT",
     "require": {
         "php": ">=5.3.3",
