Add missed options for autoloading.

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,11 @@
     "autoload": {
         "psr-0": {
             "HcbTranslations": "src/"
-        }
+        },
+
+        "classmap": [
+            "./Module.php"
+        ]
     },
     "minimum-stability": "dev"
 }
