--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "doctrine/doctrine-module": "0.*",
         "doctrine/doctrine-orm-module": "0.*",
         "doctrine/migrations": "v1.0-ALPHA1",
-        "zetacomponents/archive": "dev-master",
+        "zetacomponents/archive": "1.*",
         "rwoverdijk/assetmanager": "1.3.5"
     },
     "autoload": {
